# oasis

./: .gitignore  COPYRIGHT  Cargo.toml  GOLDEN_BINARY_BUILD.md  GOLDEN_BINARY_VERIFICATION.md  LICENSE.md  NOTICE.md  PHASE5_NEUROWALL_COMPLETE.md  POST_BUILD_SUMMARY.md  README.md  RUST_ARCHITECTURE.md  RUST_REFACTORED_SUMMARY.md
.securamem/: USER_GUIDE.md
crates/oasis-codex/: Cargo.toml
crates/oasis-codex/src/: indexer.rs  lib.rs  parser.rs  search.rs
crates/oasis-sandbox/: Cargo.toml
crates/oasis-sandbox/src/: auditor.rs  chamber.rs  lib.rs  runner.rs
crates/securamem-cli/: Cargo.toml
crates/securamem-cli/src/: main.rs
crates/securamem-core/: Cargo.toml
crates/securamem-core/src/: identity.rs  lib.rs  license.rs
crates/securamem-crypto/: Cargo.toml
crates/securamem-crypto/src/: hash_chain.rs  lib.rs  receipt.rs
crates/securamem-firewall/: Cargo.toml
crates/securamem-firewall/src/: engine.rs  lib.rs  proxy.rs
crates/securamem-firewall/tests/: consistency_test.rs  parity_test.rs
crates/securamem-l1/: Cargo.toml
crates/securamem-l1/src/: lib.rs
crates/securamem-l3/: Cargo.toml
crates/securamem-l3/src/: lib.rs
crates/securamem-storage/: Cargo.toml
crates/securamem-storage/src/: hash_chain_store.rs  lib.rs  store.rs
demo_scripts/: 1_attack_ai.sh  2_verify_chain.sh
migrations/: 001_audit_log_schema.sql  002_semantic_codex_schema.sql
