[package]
name = "oasis-codex"
version.workspace = true
edition.workspace = true

[dependencies]
tree-sitter = "0.20"
tree-sitter-rust = "0.20"
tree-sitter-javascript = "0.20"
tree-sitter-python = "0.20"
tree-sitter-typescript = "0.20"
securamem-storage = { path = "../securamem-storage" }
securamem-firewall = { path = "../securamem-firewall" }
sqlx = { version = "0.7", features = ["sqlite", "runtime-tokio-rustls"] }
anyhow = "1.0"
tracing = "0.1"
sha2 = "0.10"
hex = "0.4"
bytemuck = "1.14"

