[package]
name = "securamem-core"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
thiserror = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
chrono = { workspace = true }

# Licensing & Identity
machine-uid = "0.5"
jsonwebtoken = "9.2"
whoami = "1.5"
hex = { workspace = true }
sha2 = { workspace = true }
ed25519-dalek = { workspace = true }
rand_core = { workspace = true }
pkcs8 = { workspace = true }

# No other internal crate dependencies - this is the dependency root
