[package]
name = "securamem-storage"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
securamem-core = { path = "../securamem-core" }
securamem-crypto = { path = "../securamem-crypto" }

# Database
sqlx = { workspace = true }
tokio = { workspace = true }
futures = { workspace = true }

# Utilities
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
tracing = { workspace = true }
